# ateda

./: .env.example  .gitignore  Makefile  README.md  benchmark-consolidate-avro.py  benchmark-read-avro.py  dagster-workspace.yaml  dagster.yaml  docker-compose.yml  kind-config.yaml  notes.md  pyproject.toml  workspace.yaml
.github/workflows/: spark-image-ci.yaml
dbt/ateda/: dbt_project.yml
dbt/ateda/models/: sources.yml
dbt/ateda/models/bronze/: ztf_alert.sql
dbt/ateda/models/silver/: crossmatch_gaia.sql  crossmatch_ps1.sql  crossmatch_ss.sql  detection.sql  forced_photometry.sql  non_detection.sql  reference.sql
deployment/docker/: dagster_system.Dockerfile  dagster_user_code.Dockerfile
deployment/docker-compose/: docker-compose.yml
deployment/docker/spark/: Dockerfile
docker/dagster/: Dockerfile  Dockerfile.code
infrastructure/docker/dagster/: Dockerfile
infrastructure/docker/spark/: Dockerfile
infrastructure/k8s/: helmfile.yaml  kind-config.yaml
infrastructure/k8s/components/lakekeeper/: values-dev.yaml.gotmpl
infrastructure/k8s/components/minio/: values-dev.yaml.gotmpl
infrastructure/k8s/components/nessie/: values-dev.yaml.gotmpl
infrastructure/k8s/components/postgres/: values-dev.yaml.gotmpl
infrastructure/k8s/components/prometheus/: values-dev.yaml.gotmpl
infrastructure/k8s/components/spark-operator/: values-dev.yaml.gotmpl
infrastructure/k8s/components/spark-thrift-server/: Chart.yaml  deployment.yaml  values-dev.yaml.gotmpl  values.yaml
infrastructure/k8s/components/spark-thrift-server/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  driver-headless-service.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
infrastructure/k8s/components/starrocks/: values-dev.yaml.gotmpl
infrastructure/k8s/components/trino/: values-dev.yaml.gotmpl
infrastructure/k8s/environments/dev/: secrets.yaml
src/ateda_platform/: definitions.py  partitions.py  resources.py
src/ateda_platform/assets/ingestion/: __init__.py  assets.py  bronze_raw_ztf_alert.py  bronze_ztf_alert_archive.py  bronze_ztf_alert_parquet.py  hello_world_asset.py  ingestion_assets.py
src/ateda_platform/assets/processing/: hello_iceberg_asset.py  silver_fact_detection_asset.py  spark_processing_assets.py
src/ateda_platform/assets/transformation/: __init__.py  assets.py  combine.py  detection.py  silver_fact_detection.py  spark_kube_utils.py
src/ateda_platform/kubernetes/: spark_models.py
src/ateda_platform/orchestration/: repositories.py
src/ateda_platform/resources/: nessie.py  s3.py
src/ateda_platform/spark/: bronze_ingest.py  fact_detection.py  hello_iceberg.py  process_alerts_to_fact_detection.py  process_combine_alerts.py  process_fact_detection.py
