[project]
name = "ateda-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroquery>=0.4.10",
    "astropy>=7.0.1",
    "boto3>=1.38.3",
    "dagster-aws>=0.26.12",
    "dagster-docker>=0.26.12",
    "dagster-graphql>=1.10.12",
    "dagster-pipes>=1.10.12",
    "dagster-postgres>=0.26.12",
    "dagster-webserver>=1.10.12",
    "dagster>=1.10.12",
    "dbt-core>=1.9.4",
    "dbt-spark[pyhive,session]>=1.9.2",
    "dbt-trino>=1.9.1",
    "duckdb>=1.2.2",
    "fastavro>=1.10.0",
    "ipywidgets>=8.1.6",
    "kubernetes>=32.0.1",
    "polars[pyarrow]>=1.28.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pyiceberg>=0.9.0",
    "pyspark>=3.5.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "trino>=0.333.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "dbt-starrocks>=1.9.0",
    "minio>=7.2.15",
    "avro>=1.12.0",
]
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "awscli>=1.40.2",
    "boto3-stubs[essential]>=1.38.3",
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "nbconvert>=7.16.6",
    "ruff>=0.11.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ateda_platform"]

[tool.dagster]
module_name = "ateda_platform.definitions"
